--- a/style.css
+++ b/style.css
@@ -153,48 +153,29 @@ header {
 
 /*TERMINA FOOTER*/
 
-/*.containerFlex {
+.containerFlex {
   display: flex;
-}*/
-
-.containerFlex aside {
-  max-width: 70%;
+  margin-bottom: 30px;
+  padding-bottom: 30px;
 }
 
-.containerFlex aside img {
-  max-width: 40%;
-}
 
 .sectionOne {
-  width: 60%;
-  margin-left: 20px;
+  width: 50%;
+  margin-left: 10px;
   padding-right: 15px;
+  align-self: flex-start;
   justify-content: flex-end
 }
 
-.sectionTwo {
+.pic-ctn {
+  width: 50%;
+  position: relative;
   display: flex;
-  width: 40%;
-  margin: 5px;
+  align-self: flex-start;
   flex-wrap: wrap;
 }
 
-.sectionTwo .img-item {
-  width: 270px;
-  height: 180px;
-  margin: 5px;
-  border-radius: 7px;
-  overflow: hidden;
-}
-
-.sectionTwo .img-item img {
-  width: 100%;
-  -webkit-transition: all 0.5s 0s ease;
-  -moz-transition: all 0.5s 0s ease;
-  -o-transition: all 0.5s 0s ease;
-  transition: all 0.5s 0s ease;
-
-}
 
 
 .sectionTwo .img-item img:hover {
@@ -291,7 +272,6 @@ justify-content: space-between;
 
 }
 
-.
 
 /*pestaña videos*/
 
@@ -483,8 +463,31 @@ textarea {
     grid-row: span 2;
   }
 }
+/*texto de costado
 
-/*nuevo index*/
+.invert {
+  font-size: 100px;
+  margin: 0;
+   writing-mode: vertical-lr;
+  text-align: center;
+  line-height: .9;
+  width: 20%;
+}
+
+.rotate {
+   transform: rotate(180deg);
+}
+
+.rotate{
+  display: grid;
+  height: 100vh;
+  justify-content: center;
+  align-content: center;
+  grid-template-columns: max-content max-content;
+}
+*/
+
+/*nuevo index
 .containerFlex {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -496,3 +499,136 @@ textarea {
     .div1 { grid-area: 1 / 1 / 2 / 2; }
     .div2 { grid-area: 1 / 2 / 2 / 3; }
     .div3 { grid-area: 2 / 1 / 3 / 3; }
+*/
+
+/*agregado mas animaciones*/
+
+:root {
+  --background: #0a0a43;
+  --color: #FAFAFA;
+}
+
+.containertext {
+  color: var(--color);
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: var(--background);
+}
+
+.rightt {
+  text-align: right;
+  width: 30%;
+  padding: 1px 25px;
+}
+.leftt {
+  text-align: left;
+  width: 30%;
+  padding: 1px 25px;
+}
+.stack {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.stack span {
+  font-weight: bold;
+  grid-row-start: 1;
+  grid-column-start: 1;
+  font-size: 4rem;
+  --stack-height: calc(100% / var(--stacks) - 1px);
+  --inverse-index: calc(calc(var(--stacks) - 1) - var(--index));
+  --clip-top: calc(var(--stack-height) * var(--index));
+  --clip-bottom: calc(var(--stack-height) * var(--inverse-index));
+  clip-path: inset(var(--clip-top) 0 var(--clip-bottom) 0);
+  animation: stack 340ms cubic-bezier(.46,.29,0,1.24) 1 backwards calc(var(--index) * 120ms), glitch 2s ease infinite 2s alternate-reverse;
+}
+
+.stack span:nth-child(odd) { --glitch-translate: 8px; }
+.stack span:nth-child(even) { --glitch-translate: -8px; }
+
+@keyframes stack {
+  0% {
+    opacity: 0;
+    transform: translateX(-50%);
+    text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
+  };
+  60% {
+    opacity: 0.5;
+    transform: translateX(50%);
+  }
+  80% {
+    transform: none;
+    opacity: 1;
+    text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
+  }
+  100% {
+    text-shadow: none;
+  }
+}
+
+@keyframes glitch {
+  0% {
+    text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
+    transform: translate(var(--glitch-translate));
+  }
+  2% {
+    text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
+  }
+  4%, 100% {  text-shadow: none; transform: none; }
+}
+/*NUEVO CARROUSEL*/
+
+
+@keyframes display {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
+  }
+  10% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  20% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  30% {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(-200px);
+    opacity: 0;
+  }
+}
+
+
+.pic-ctn > img {
+  position: absolute;
+  width: 80%;
+  left: calc(30% - 100px);
+  opacity: 0;
+  animation: display 10s infinite;
+}
+
+img:nth-child(2) {
+  animation-delay: 2s;
+}
+img:nth-child(3) {
+  animation-delay: 4s;
+}
+img:nth-child(4) {
+  animation-delay: 6s;
+}
+img:nth-child(5) {
+  animation-delay: 8s;
+}
+
+
+
+
+
+
