--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  box-sizing: border-box;
   background-color: rgb(245, 245, 245)
 }
 
 html {
-
   font-size: 18px;
 }
 
-main {
-  margin-left: 30px;
+.nav-item a:hover {
+  color: aqua;
 }
 
 * {
@@ -30,69 +30,11 @@ main {
   max-width: 180px;
 }
 
-/*nuevo efecto gradiente en titulo*/
-#titulo {
-  text-align: center;
-  font-size: 50px;
-  font-weight: 600;
-  background-image: radial-gradient(#222222, #4682bb);
-
-  color: transparent;
-  background-clip: text;
-  -webkit-background-clip: text;
-}
-
-
-
 h2 {
   font-size: 1.5rem;
 }
 
-ul {
-  list-style: none;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0px 30px;
-  background-color: white;
-}
-
-
-#navegable {
-  padding-top: 10px;
-}
-
-#navegable ul {
-  list-style-type: none;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
-
-#navegable li {
-  display: inline-block;
-  text-align: center;
-
-}
-
-#navegable a {
-  text-decoration: none;
-  color: steelblue;
-  padding: 15px 10px;
-  font-size: 1.1rem;
-
-}
-
-
-#navegable a:hover {
-  color: aqua
-}
-
-/*NUEVO FOOTER*/
-
+/*estilo FOOTER*/
 .pie-pagina {
   width: 100%;
   background-color: #0a141d;
@@ -143,8 +85,6 @@ header {
   text-align: center;
   color: #fff;
   width: 100%;
-
-
 }
 
 .pie-pagina .grupo-2 small {
@@ -152,14 +92,13 @@ header {
 }
 
 /*TERMINA FOOTER*/
-
 .containerFlex {
   display: flex;
   margin-bottom: 30px;
   padding-bottom: 30px;
 }
 
-
+/* SECTION DE TEXTO Y CARROUSEL*/
 .sectionOne {
   width: 50%;
   margin-left: 10px;
@@ -176,64 +115,35 @@ header {
   flex-wrap: wrap;
 }
 
-
-
-.sectionTwo .img-item img:hover {
-  -webkit-transform: scale(1.3);
-  transform: scale(1.3);
-}
-
-.repspotify {
-  text-align: center;
-  border-radius: 12px;
-  display: inline-flex;
-  margin: 30px;
-
-}
-
-.repspotify iframe {
-  max-width: 400px;
-  width: 100%;
-  height: 380px;
-  margin: 0 auto;
-}
-
-.videojuego video{
-  display: inline-flex;
-  margin: 30px;
-  width: 30%;
-}
 /* CARTA ABAJO NOTAS*/
-
-.card {
+.cardSection {
   width: 100%;
- display: flex;
+  display: flex;
   flex-direction: row;
   margin: auto;
   justify-content: center;
   margin-bottom: 15px;
-
 }
 
-.card .card-item {
+.cardSection .card-item {
   background-size: cover;
   background-position: center center;
   margin: 0px 10px 0px 10px;
 }
 
-.card .card-item#id-one {
+.cardSection .card-item#id-one {
   background-image: url(imagen/album.png);
 }
 
-.card .card-item#id-two {
+.cardSection .card-item#id-two {
   background-image: url(imagen/mutek.png);
 }
 
-.card .card-item#id-t {
+.cardSection .card-item#id-t {
   background-image: url(imagen/nota3.png);
 }
 
-.card .card-body {
+.cardSection .card-body {
   width: 100%;
   height: 230px;
   border-radius: 8px;
@@ -241,37 +151,36 @@ header {
   text-align: center;
   transition: all 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-display: flex;
-flex-direction: column;
-justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
 }
 
 
-.card .card-body:hover {
+.cardSection .card-body:hover {
   transform: translateY(-15px);
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
 
-.card .card-body .card-tittle h5.card-title {
+.cardSection .card-body .card-tittle h5.card-title {
   font-weight: 600;
 }
 
-.card .card-body .card-tittle p.card-text {
+.cardSection .card-body .card-tittle p.card-text {
   padding: 0 1rem;
   font-size: 16px;
   font-weight: 300;
 }
 
-.card .card-body a {
+.cardSection .card-body a {
   font-weight: 500;
   text-decoration: none;
-  color: #4682bb;
+  color: #757cdf;
 
 
 }
-
 
 /*pestaña videos*/
 
@@ -281,36 +190,22 @@ justify-content: space-between;
   text-align: center;
 }
 
-.grid-videos {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 15px 15px;
-}
-
-.grid-videos .galeria {
+.video {
   margin: 10px 20px;
   box-shadow: 0 4px 8px 0 lightskyblue, 0 6px 20px 0 black;
 }
 
 
-.grid-videos .galeria:hover {
+.video:hover {
   border: 1px solid lightseagreen;
-}
+  filter: opacity(0.9);
+  transform: scale(1.04);
+  border-radius: 4px;
+  transition: transform 0.3s ease-in-out;
 
-.grid-videos .galeria iframe {
-  width: 100%;
-  height: auto;
-}
-
-.grid-videos .galeria .pie p {
-  text-align: center;
-  padding: 10px;
-  margin: 5px;
 }
 
 /*formulario*/
-
 
 .form {
   position: relative;
@@ -424,35 +319,7 @@ textarea {
   }
 }
 
-/*nuevo videos para musica no lineal*/
 
-.grid-video-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  background-color: #03afff;
-  border-radius: 4px;
-  transition: transform 0.3s ease-in-out;
-
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.grid-video-item:hover {
-  filter: opacity(0.9);
-  transform: scale(1.04);
-}
-
-.grid-video-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: minmax(200px, auto);
-  gap: 20px;
-  padding: 20px;
-  grid-auto-flow: dense;
-}
 
 @media (min-width: 600px) {
   .wide {
@@ -478,18 +345,21 @@ textarea {
   justify-content: center;
   align-items: center;
   background: var(--background);
+  width: 100%;
 }
 
 .rightt {
   text-align: right;
   width: 30%;
-  padding: 1px 25px;
+  padding: 1px;
 }
+
 .leftt {
   text-align: left;
   width: 30%;
-  padding: 1px 25px;
+  padding: 1px;
 }
+
 .stack {
   display: grid;
   grid-template-columns: 1fr;
@@ -505,27 +375,37 @@ textarea {
   --clip-top: calc(var(--stack-height) * var(--index));
   --clip-bottom: calc(var(--stack-height) * var(--inverse-index));
   clip-path: inset(var(--clip-top) 0 var(--clip-bottom) 0);
-  animation: stack 340ms cubic-bezier(.46,.29,0,1.24) 1 backwards calc(var(--index) * 120ms), glitch 2s ease infinite 2s alternate-reverse;
+  animation: stack 340ms cubic-bezier(.46, .29, 0, 1.24) 1 backwards calc(var(--index) * 120ms), glitch 2s ease infinite 2s alternate-reverse;
 }
 
-.stack span:nth-child(odd) { --glitch-translate: 8px; }
-.stack span:nth-child(even) { --glitch-translate: -8px; }
+.stack span:nth-child(odd) {
+  --glitch-translate: 8px;
+}
+
+.stack span:nth-child(even) {
+  --glitch-translate: -8px;
+}
 
 @keyframes stack {
   0% {
     opacity: 0;
     transform: translateX(-50%);
     text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
-  };
+  }
+
+  ;
+
   60% {
     opacity: 0.5;
     transform: translateX(50%);
   }
+
   80% {
     transform: none;
     opacity: 1;
     text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
   }
+
   100% {
     text-shadow: none;
   }
@@ -536,39 +416,47 @@ textarea {
     text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
     transform: translate(var(--glitch-translate));
   }
+
   2% {
     text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
   }
-  4%, 100% {  text-shadow: none; transform: none; }
+
+  4%,
+  100% {
+    text-shadow: none;
+    transform: none;
+  }
 }
+
 /*NUEVO CARROUSEL*/
-
-
 @keyframes display {
   0% {
     transform: translateX(200px);
     opacity: 0;
   }
+
   10% {
     transform: translateX(0);
     opacity: 1;
   }
+
   20% {
     transform: translateX(0);
     opacity: 1;
   }
+
   30% {
     transform: translateX(-200px);
     opacity: 0;
   }
+
   100% {
     transform: translateX(-200px);
     opacity: 0;
   }
 }
 
-
-.pic-ctn > img {
+.pic-ctn>img {
   position: absolute;
   width: 60%;
   left: calc(30% - 100px);
@@ -579,18 +467,19 @@ textarea {
 img:nth-child(2) {
   animation-delay: 2s;
 }
+
 img:nth-child(3) {
   animation-delay: 4s;
 }
+
 img:nth-child(4) {
   animation-delay: 6s;
 }
+
 img:nth-child(5) {
   animation-delay: 8s;
 }
 
-
-
-
-
-
+.imgCarousel div img {
+  max-height: 40vh;
+}
