--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,60 +1,14 @@
 @import "https://fonts.googleapis.com/css2?family=Poppins&family=Raleway:wght@100&family=Roboto+Flex:opsz,wght@8..144,300&family=Water+Brush&display=swap";
+@import "../base/colors";
+@import "../base/extends";
+@import "../component/animated";
+@import "../component/footer";
+@import "../component/carousel";
+@import "../component/contact";
+@import "../component/main";
+@import "../component/nav";
+@import "../component/video";
 
-@keyframes "stack" {
-	0% {
-		opacity: 0;
-		transform: translateX(-50%);
-		text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
-	}
-	; 60% {
-		opacity: 0.5;
-		transform: translateX(50%);
-	}
-	80% {
-		transform: none;
-		opacity: 1;
-		text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
-	}
-	100% {
-		text-shadow: none;
-	}
-}
-@keyframes "glitch" {
-	0% {
-		text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
-		transform: translate(var(--glitch-translate));
-	}
-	2% {
-		text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
-	}
-	4%,100% {
-		text-shadow: none;
-		transform: none;
-	}
-}
-/*NUEVO CARROUSEL*/
-@keyframes "display" {
-	0% {
-		transform: translateX(200px);
-		opacity: 0;
-	}
-	10% {
-		transform: translateX(0);
-		opacity: 1;
-	}
-	20% {
-		transform: translateX(0);
-		opacity: 1;
-	}
-	30% {
-		transform: translateX(-200px);
-		opacity: 0;
-	}
-	100% {
-		transform: translateX(-200px);
-		opacity: 0;
-	}
-}
 body {
 	margin: 0;
 	padding: 0;
@@ -65,344 +19,13 @@ body {
 html {
 	font-size: 18px;
 }
-.nav-item {
-	a {
-		&:hover {
-			color: aqua;
-		}
-	}
-}
+
 * {
 	line-height: normal;
 	letter-spacing: normal;
 	box-sizing: border-box;
 }
-.logo {
-	height: auto;
-	width: 100%;
-	max-width: 180px;
-}
+
 h2 {
 	font-size: 1.5rem;
-}
-.pie-pagina {
-	width: 100%;
-	background-color: #0a141d;
-	.grupo-1 {
-		width: 100%;
-		max-width: 1200px;
-		margin: auto;
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-gap: 50px;
-		padding: 10px 0px;
-		text-align: center;
-		.box {
-			h2 {
-				color: #fff;
-				margin-bottom: 25px;
-				font-size: 20px;
-			}
-			p {
-				color: #efefef;
-				margin-bottom: 10px;
-			}
-		}
-		.red-social {
-			a {
-				display: inline-block;
-				text-decoration: none;
-				width: 45px;
-				height: 45px;
-				line-height: 45px;
-				color: #fff;
-				margin-right: 10px;
-				background-color: #0d2033;
-				text-align: center;
-				transition: all 300ms ease;
-				&:hover {
-					color: aqua;
-				}
-			}
-		}
-	}
-	.grupo-2 {
-		background-color: #0a1a2a;
-		padding: 15px 10px;
-		text-align: center;
-		color: #fff;
-		width: 100%;
-		small {
-			font-size: 15px;
-		}
-	}
-}
-.containerFlex {
-	display: flex;
-	margin-bottom: 30px;
-	padding-bottom: 30px;
-}
-.sectionOne {
-	width: 50%;
-	margin-left: 10px;
-	padding-right: 15px;
-	align-self: flex-start;
-	justify-content: flex-end;
-}
-.pic-ctn {
-	width: 50%;
-	position: relative;
-	display: flex;
-	align-self: flex-start;
-	flex-wrap: wrap;
-	>img {
-		position: absolute;
-		width: 60%;
-		left: calc(30% - 100px);
-		opacity: 0;
-		animation: display 10s infinite;
-	}
-}
-.cardSection {
-	width: 100%;
-	display: flex;
-	flex-direction: row;
-	margin: auto;
-	justify-content: center;
-	margin-bottom: 15px;
-	.card-item {
-		background-size: cover;
-		background-position: center center;
-		margin: 0px 10px 0px 10px;
-	}
-	.card-item#id-one {
-		background-image: url(../imagen/album.png);
-	}
-	.card-item#id-two {
-		background-image: url(../imagen/mutek.png);
-	}
-	.card-item#id-t {
-		background-image: url(../imagen/nota3.png);
-	}
-	.card-body {
-		width: 100%;
-		height: 230px;
-		border-radius: 8px;
-		overflow: hidden;
-		text-align: center;
-		transition: all 0.25s;
-		box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		&:hover {
-			transform: translateY(-15px);
-			box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
-		}
-		.card-tittle {
-			h5.card-title {
-				font-weight: 600;
-			}
-			p.card-text {
-				padding: 0 1rem;
-				font-size: 16px;
-				font-weight: 300;
-			}
-		}
-		a {
-			font-weight: 500;
-			text-decoration: none;
-			color: #757cdf;
-		}
-	}
-}
-.titulovideo {
-	text-shadow: 1px 2px 2px;
-	color: steelblue;
-	text-align: center;
-}
-.video {
-	margin: 10px 20px;
-	box-shadow: 0 4px 8px 0 lightskyblue, 0 6px 20px 0 black;
-	&:hover {
-		border: 1px solid lightseagreen;
-		filter: opacity(0.9);
-		transform: scale(1.04);
-		border-radius: 4px;
-		transition: transform 0.3s ease-in-out;
-	}
-}
-.form {
-	position: relative;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 20px 100px;
-	&:after {
-		content: '';
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		left: 0;
-		top: 0;
-		background: url("../imagen/contacto.jpg") no-repeat center;
-		background-size: cover;
-		filter: blur(50px);
-		z-index: -1;
-	}
-}
-.contact-box {
-	max-width: 850px;
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	background-color: #fff;
-	box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
-	.right {
-		h2 {
-			position: relative;
-			padding: 0 0 10px;
-			margin-bottom: 10px;
-			&:after {
-				content: '';
-				position: absolute;
-				left: 50%;
-				bottom: 0;
-				transform: translateX(-50%);
-				height: 4px;
-				width: 50px;
-				border-radius: 2px;
-				background-color: #1e0473;
-			}
-		}
-	}
-}
-.left {
-	background: url("../imagen/contacto.jpg") no-repeat center;
-	background-size: cover;
-	height: 100%;
-}
-.right {
-	padding: 25px 40px;
-}
-.field {
-	width: 100%;
-	border: 2px solid rgba(0, 0, 0, 0);
-	outline: none;
-	background-color: rgba(230, 230, 230, 0.6);
-	padding: 0.5rem 1rem;
-	font-size: 1.1rem;
-	margin-bottom: 22px;
-	transition: .3s;
-	&:hover {
-		background-color: rgba(0, 0, 0, 0.1);
-	}
-	&:focus {
-		border: 2px solid rgba(30, 85, 250, 0.47);
-		background-color: #fff;
-	}
-}
-textarea {
-	min-height: 150px;
-}
-.btn {
-	width: 100%;
-	padding: 0.5rem 1rem;
-	background-color: #1e0473;
-	color: #fff;
-	font-size: 1.1rem;
-	border: none;
-	outline: none;
-	cursor: pointer;
-	transition: .3s;
-	&:hover {
-		background-color: #279aae;
-	}
-}
-:root {
-	--background: #0a0a43;
-	--color: #FAFAFA;
-}
-.containertext1 {
-	color: var(--color);
-	font-size: 1.5rem;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	background: var(--background);
-	width: 100%;
-}
-.rightt {
-	text-align: right;
-	width: 30%;
-	padding: 1px;
-}
-.leftt {
-	text-align: left;
-	width: 30%;
-	padding: 1px;
-}
-.stack {
-	display: grid;
-	grid-template-columns: 1fr;
-	span {
-		font-weight: bold;
-		grid-row-start: 1;
-		grid-column-start: 1;
-		font-size: 4rem;
-		--stack-height: calc(100% / var(--stacks) - 1px);
-		--inverse-index: calc(calc(var(--stacks) - 1) - var(--index));
-		--clip-top: calc(var(--stack-height) * var(--index));
-		--clip-bottom: calc(var(--stack-height) * var(--inverse-index));
-		clip-path: inset(var(--clip-top) 0 var(--clip-bottom) 0);
-		animation: stack 340ms cubic-bezier(.46, .29, 0, 1.24) 1 backwards calc(var(--index) * 120ms), glitch 2s ease infinite 2s alternate-reverse;
-		&:nth-child(odd) {
-			--glitch-translate: 8px;
-		}
-		&:nth-child(even) {
-			--glitch-translate: -8px;
-		}
-	}
-}
-img {
-	&:nth-child(2) {
-		animation-delay: 2s;
-	}
-	&:nth-child(3) {
-		animation-delay: 4s;
-	}
-	&:nth-child(4) {
-		animation-delay: 6s;
-	}
-	&:nth-child(5) {
-		animation-delay: 8s;
-	}
-}
-.imgCarousel {
-	div {
-		img {
-			max-height: 40vh;
-		}
-	}
-}
-@media screen and (max-width: 880px) {
-	.contact-box {
-		grid-template-columns: 1fr;
-	}
-	.left {
-		height: 200px;
-	}
-}
-@media (min-width: 600px) {
-	.wide {
-		grid-column: span 2;
-	}
-	.tall {
-		grid-row: span 2;
-	}
 }
