--- a/scss/component/_contact.scss
+++ b/scss/component/_contact.scss
@@ -1,3 +1,5 @@
+@import "../base/listas";
+@import "../base/mixins";
 
 .form {
 	position: relative;
@@ -13,20 +15,21 @@
 		height: 100%;
 		left: 0;
 		top: 0;
-		background: url("../imagen/contacto.jpg") no-repeat center;
+		background: url("../imagen/contacto.webp") no-repeat center;
 		background-size: cover;
 		filter: blur(50px);
 		z-index: -1;
 	}
 }
 .contact-box {
+	@include display  
 	max-width: 850px;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	background-color: #fff;
+	background-color: nth($colores, 7);
 	box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
 	.right {
 		h2 {
@@ -42,13 +45,13 @@
 				height: 4px;
 				width: 50px;
 				border-radius: 2px;
-				background-color: $bg-blue;
+				background-color: nth($colores, 1);
 			}
 		}
 	}
 }
 .left {
-	background: url("../imagen/contacto.jpg") no-repeat center;
+	background: url("../imagen/contacto.webp") no-repeat center;
 	background-size: cover;
 	height: 100%;
 }
@@ -59,17 +62,17 @@
 	width: 100%;
 	border: 2px solid rgba(0, 0, 0, 0);
 	outline: none;
-	background-color: rgba(230, 230, 230, 0.6);
+	background-color: nth($colores, 5);
 	padding: 0.5rem 1rem;
 	font-size: 1.1rem;
 	margin-bottom: 22px;
 	transition: .3s;
 	&:hover {
-		background-color: rgba(0, 0, 0, 0.1);
+		background-color: nth($colores, 6);
 	}
 	&:focus {
 		border: 2px solid rgba(30, 85, 250, 0.47);
-		background-color: #fff;
+		background-color: nth($colores, 7);
 	}
 }
 textarea {
@@ -78,14 +81,14 @@ textarea {
 .btn {
 	width: 100%;
 	padding: 0.5rem 1rem;
-	background-color: $bg-blue;
-	color: #fff;
+	background-color:nth($colores, 1);
+	color: nth($colores, 7);
 	font-size: 1.1rem;
 	border: none;
 	outline: none;
 	cursor: pointer;
 	transition: .3s;
 	&:hover {
-		background-color: #279aae;
+		background-color: nth($colores, 8);
 	}
 }
