--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,13 +1,14 @@
 @import "https://fonts.googleapis.com/css2?family=Poppins&family=Raleway:wght@100&family=Roboto+Flex:opsz,wght@8..144,300&family=Water+Brush&display=swap";
-@import "../base/colors";
-@import "../base/extends";
-@import "../component/animated";
-@import "../component/footer";
-@import "../component/carousel";
-@import "../component/contact";
-@import "../component/main";
-@import "../component/nav";
-@import "../component/video";
+@import "./base/listas";
+@import "./base/mixins";
+@import "./base/extends";
+@import "./component/animated";
+@import "./component/footer";
+@import "./component/carousel";
+@import "./component/contact";
+@import "./component/main";
+@import "./component/nav";
+@import "./component/video";
 
 body {
 	margin: 0;
