--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import "https://fonts.googleapis.com/css2?family=Poppins&family=Raleway:wght@100&family=Roboto+Flex:opsz,wght@8..144,300&family=Water+Brush&display=swap";
-.form, .cardSection, .containertext1 {
+.cardSection {
   display: flex;
   justify-content: center; }
 
@@ -99,10 +99,10 @@
       color: #efefef;
       margin-bottom: 10px; }
     .pie-pagina .grupo-1 .red-social a {
-      display: inline-block;
-      text-decoration: none;
       width: 45px;
       height: 45px;
+      display: inline-block;
+      text-decoration: none;
       line-height: 45px;
       color: #fff;
       margin-right: 10px;
@@ -147,18 +147,19 @@ img:nth-child(5) {
   .tall {
     grid-row: span 2; } }
 
-/*@import "/scss/base/mixins";*/
 .form {
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  align-items: center;
+  position: relative;
   padding: 20px 100px; }
   .form:after {
-    content: '';
-    position: absolute;
     width: 100%;
     height: 100%;
+    content: '';
+    position: absolute;
     left: 0;
     top: 0;
     background: url("../imagen/contacto.webp") no-repeat center;
@@ -167,12 +168,11 @@ img:nth-child(5) {
     z-index: -1; }
 
 .contact-box {
-  max-width: 850px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
   justify-content: center;
   align-items: center;
-  text-align: center;
+  max-width: 850px;
+  grid-template-columns: repeat(2, 1fr);
   background-color: #fff;
   box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19); }
   .contact-box .right h2 {
@@ -180,13 +180,13 @@ img:nth-child(5) {
     padding: 0 0 10px;
     margin-bottom: 10px; }
     .contact-box .right h2:after {
+      width: 50px;
+      height: 4px;
       content: '';
       position: absolute;
       left: 50%;
       bottom: 0;
       transform: translateX(-50%);
-      height: 4px;
-      width: 50px;
       border-radius: 2px;
       background-color: #1e0473; }
 
@@ -270,7 +270,7 @@ textarea {
   .cardSection .card-item#id-t {
     background-image: url(../imagen/nota3.webp); }
   .cardSection .card-body {
-    width: 100%;
+    width: 100px;
     height: 230px;
     border-radius: 8px;
     overflow: hidden;
@@ -299,10 +299,12 @@ textarea {
   --color: #FAFAFA; }
 
 .containertext1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: var(--color);
   font-size: 1.5rem;
   flex-direction: column;
-  align-items: center;
   background: var(--background);
   width: 100%; }
 
@@ -339,8 +341,8 @@ textarea {
   color: #00ffff; }
 
 .logo {
-  height: auto;
   width: 100%;
+  height: auto;
   max-width: 180px; }
 
 .titulovideo {
