--- a/scss/component/_contact.scss
+++ b/scss/component/_contact.scss
@@ -1,18 +1,15 @@
 @import "../base/listas";
 @import "../base/mixins";
-
 .form {
+	@include display (flex, center, center);
+	@include tamaño (100%, 100%);
 	position: relative;
-	width: 100%;
-	height: 100%;
-	@extend %display;
-	align-items: center;
+
 	padding: 20px 100px;
 	&:after {
+		@include tamaño (100%, 100%);
 		content: '';
 		position: absolute;
-		width: 100%;
-		height: 100%;
 		left: 0;
 		top: 0;
 		background: url("../imagen/contacto.webp") no-repeat center;
@@ -22,13 +19,9 @@
 	}
 }
 .contact-box {
-	@include display  
+	@include display (grid,center,center);
 	max-width: 850px;
-	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	justify-content: center;
-	align-items: center;
-	text-align: center;
 	background-color: nth($colores, 7);
 	box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
 	.right {
@@ -37,13 +30,12 @@
 			padding: 0 0 10px;
 			margin-bottom: 10px;
 			&:after {
+				@include tamaño (50px, 4px);
 				content: '';
 				position: absolute;
 				left: 50%;
 				bottom: 0;
 				transform: translateX(-50%);
-				height: 4px;
-				width: 50px;
 				border-radius: 2px;
 				background-color: nth($colores, 1);
 			}
