--- a/scss/component/_main.scss
+++ b/scss/component/_main.scss
@@ -27,7 +27,8 @@
 	}
 }
 .cardSection {
-	@extend %display;
+	display: flex;
+	justify-content: center;
 	width: 100%;
 	flex-direction: row;
 	margin: auto;	
